Remove commented code from scripts/run.sh script.